--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,9 @@
     "web_accessible_resources": [
       {
         "resources": [
-          "images/timeIsSword.jpg"
+          "images/timeIsSword.jpg",
+          "resources.json"
+
         ],
         "matches": [
           "<all_urls>"
