--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,14 @@
         "run_at": "document_end"
       }
     ],
+    "action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+      }
+    },
     "web_accessible_resources": [
       {
         "resources": [
